--- a/Fire/GameApplication/imgui.ini
+++ b/Fire/GameApplication/imgui.ini
@@ -12,28 +12,31 @@ Collapsed=0
 DockId=0x00000005,0
 
 [Window][Component]
-Pos=1518,370
-Size=388,304
+ViewportPos=435,71
+ViewportId=0xCB0F23F4
+Size=388,603
 Collapsed=0
-DockId=0x00000003,0
 
 [Window][System]
-Pos=1518,64
-Size=388,304
+ViewportPos=2004,74
+ViewportId=0xD4B39271
+Size=388,1209
 Collapsed=0
-DockId=0x00000002,2
+DockId=0x00000001,2
 
 [Window][Entity]
-Pos=1518,64
-Size=388,304
+ViewportPos=2004,74
+ViewportId=0xD4B39271
+Size=388,1209
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000001,0
 
 [Window][Dear ImGui Demo]
-Pos=1518,64
-Size=388,304
+ViewportPos=2004,74
+ViewportId=0xD4B39271
+Size=388,1209
 Collapsed=0
-DockId=0x00000002,1
+DockId=0x00000001,1
 
 [Window][Example: Custom rendering]
 ViewportPos=193,168
@@ -176,9 +179,7 @@ Column 2  Width=42
 Column 3  Weight=1.0000
 
 [Docking][Data]
-DockNode      ID=0x00000004 Pos=1518,87 Size=388,610 Split=Y
-  DockNode    ID=0x00000001 Parent=0x00000004 SizeRef=392,266 Split=Y Selected=0xF57F7DD5
-    DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=392,304 Selected=0xF57F7DD5
-    DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=392,304 Selected=0x31E779E6
-  DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=392,690
+DockNode    ID=0x00000004 Pos=2004,74 Size=388,1209 Split=Y
+  DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=392,266 Selected=0xF57F7DD5
+  DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=392,690
 
