--- a/EngineModule/EngineModule/EngineModule.vcxproj
+++ b/EngineModule/EngineModule/EngineModule.vcxproj
@@ -150,6 +150,8 @@
     <ClInclude Include="EngineModulePCH.h" />
     <ClInclude Include="BaseComponent.h" />
     <ClInclude Include="Entity.h" />
+    <ClInclude Include="EntityComponentIterator.h" />
+    <ClInclude Include="EntityComponentView.h" />
     <ClInclude Include="EntityIterator.h" />
     <ClInclude Include="EntityView.h" />
     <ClInclude Include="TypeIndex.h" />
@@ -162,6 +164,8 @@
     <ClCompile Include="Component.cpp" />
     <ClCompile Include="ComponentHandle.cpp" />
     <ClCompile Include="Entity.cpp" />
+    <ClCompile Include="EntityComponentIterator.cpp" />
+    <ClCompile Include="EntityComponentView.cpp" />
     <ClCompile Include="EntityIterator.cpp" />
     <ClCompile Include="EntityView.cpp" />
     <ClCompile Include="pch.cpp">
