--- a/EngineModule/EngineModule/EngineModule.vcxproj.filters
+++ b/EngineModule/EngineModule/EngineModule.vcxproj.filters
@@ -1,124 +1,148 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Public">
+    <Filter Include="header">
       <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
       <Extensions>h;hh;hpp;hxx;h++;hm;inl;inc;ipp;xsd</Extensions>
     </Filter>
-    <Filter Include="Private">
+    <Filter Include="header\00.Define">
+      <UniqueIdentifier>{6b919da5-86c5-4606-b303-5346ec54e534}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="header\01.EntityComponentSystem">
+      <UniqueIdentifier>{eb1b93dd-aeec-4ecc-a9d4-f569df228f90}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="header\01.EntityComponentSystem\05.System">
+      <UniqueIdentifier>{cf90c91c-ade5-4128-9a8a-9fcf5f9e85b7}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="header\01.EntityComponentSystem\04.Internal">
+      <UniqueIdentifier>{3e8fe2e4-a57e-4305-ad9d-578c1489d950}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="header\01.EntityComponentSystem\03.Component">
+      <UniqueIdentifier>{87237ce0-0748-42f9-a486-eae50056419d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="header\01.EntityComponentSystem\02.Entity">
+      <UniqueIdentifier>{16732cd1-4fe3-4592-9b16-1e5932bd9620}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="header\01.EntityComponentSystem\01.World">
+      <UniqueIdentifier>{3d86e597-ac3b-4333-9d7e-1c35215f4643}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="source">
       <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
       <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
     </Filter>
-    <Filter Include="Private\03.Component">
-      <UniqueIdentifier>{14b24a5d-3db5-4d8b-8ea6-bd76397f97e1}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Private\02.Entity">
-      <UniqueIdentifier>{23369105-fad1-43ef-8975-dc2564a3de43}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Private\00.Define">
+    <Filter Include="source\00.Define">
       <UniqueIdentifier>{d2bde23b-4fbe-44c3-b1df-495bce68470d}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Public\00.Define">
-      <UniqueIdentifier>{6b919da5-86c5-4606-b303-5346ec54e534}</UniqueIdentifier>
+    <Filter Include="source\01.EntityComponentSystem">
+      <UniqueIdentifier>{8fd843ad-d5c4-45bd-a437-0de69e36f389}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Public\02.Entity">
-      <UniqueIdentifier>{16732cd1-4fe3-4592-9b16-1e5932bd9620}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Private\01.World">
+    <Filter Include="source\01.EntityComponentSystem\01.World">
       <UniqueIdentifier>{56817cc4-e8e2-4368-87bf-f47529e9a77f}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Public\01.World">
-      <UniqueIdentifier>{3d86e597-ac3b-4333-9d7e-1c35215f4643}</UniqueIdentifier>
+    <Filter Include="source\01.EntityComponentSystem\02.Entity">
+      <UniqueIdentifier>{23369105-fad1-43ef-8975-dc2564a3de43}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Public\03.Component">
-      <UniqueIdentifier>{87237ce0-0748-42f9-a486-eae50056419d}</UniqueIdentifier>
+    <Filter Include="source\01.EntityComponentSystem\03.Component">
+      <UniqueIdentifier>{14b24a5d-3db5-4d8b-8ea6-bd76397f97e1}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Private\04.Internal">
+    <Filter Include="source\01.EntityComponentSystem\04.Internal">
       <UniqueIdentifier>{d5f1a3d0-7558-4400-8189-970e71360c31}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Public\04.Internal">
-      <UniqueIdentifier>{3e8fe2e4-a57e-4305-ad9d-578c1489d950}</UniqueIdentifier>
+    <Filter Include="source\01.EntityComponentSystem\05.System">
+      <UniqueIdentifier>{800a9a4c-02ad-4d0f-a891-3b0f0401fd82}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BaseComponent.h">
-      <Filter>Public\03.Component</Filter>
+      <Filter>header\01.EntityComponentSystem\03.Component</Filter>
     </ClInclude>
     <ClInclude Include="BaseEntity.h">
-      <Filter>Public\02.Entity</Filter>
+      <Filter>header\01.EntityComponentSystem\02.Entity</Filter>
     </ClInclude>
     <ClInclude Include="EngineModulePCH.h" />
     <ClInclude Include="EngineModuleHeader.h" />
     <ClInclude Include="Entity.h">
-      <Filter>Public\02.Entity</Filter>
+      <Filter>header\01.EntityComponentSystem\02.Entity</Filter>
     </ClInclude>
     <ClInclude Include="Component.h">
-      <Filter>Public\03.Component</Filter>
+      <Filter>header\01.EntityComponentSystem\03.Component</Filter>
     </ClInclude>
     <ClInclude Include="BaseWorld.h">
-      <Filter>Public\01.World</Filter>
+      <Filter>header\01.EntityComponentSystem\01.World</Filter>
     </ClInclude>
     <ClInclude Include="World.h">
-      <Filter>Public\01.World</Filter>
+      <Filter>header\01.EntityComponentSystem\01.World</Filter>
     </ClInclude>
     <ClInclude Include="TypeIndex.h">
-      <Filter>Public\00.Define</Filter>
+      <Filter>header\00.Define</Filter>
     </ClInclude>
     <ClInclude Include="EntityView.h">
-      <Filter>Public\04.Internal</Filter>
+      <Filter>header\01.EntityComponentSystem\04.Internal</Filter>
     </ClInclude>
     <ClInclude Include="EntityIterator.h">
-      <Filter>Public\04.Internal</Filter>
+      <Filter>header\01.EntityComponentSystem\04.Internal</Filter>
     </ClInclude>
     <ClInclude Include="EntityComponentView.h">
-      <Filter>Public\04.Internal</Filter>
+      <Filter>header\01.EntityComponentSystem\04.Internal</Filter>
     </ClInclude>
     <ClInclude Include="EntityComponentIterator.h">
-      <Filter>Public\04.Internal</Filter>
+      <Filter>header\01.EntityComponentSystem\04.Internal</Filter>
     </ClInclude>
     <ClInclude Include="ComponentHandle.h">
-      <Filter>Public\04.Internal</Filter>
+      <Filter>header\01.EntityComponentSystem\03.Component</Filter>
+    </ClInclude>
+    <ClInclude Include="BaseSystem.h">
+      <Filter>header\01.EntityComponentSystem\05.System</Filter>
+    </ClInclude>
+    <ClInclude Include="System.h">
+      <Filter>header\01.EntityComponentSystem\05.System</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BaseComponent.cpp">
-      <Filter>Private\03.Component</Filter>
+      <Filter>source\01.EntityComponentSystem\03.Component</Filter>
     </ClCompile>
     <ClCompile Include="BaseEntity.cpp">
-      <Filter>Private\02.Entity</Filter>
+      <Filter>source\01.EntityComponentSystem\02.Entity</Filter>
     </ClCompile>
     <ClCompile Include="Component.cpp">
-      <Filter>Private\03.Component</Filter>
+      <Filter>source\01.EntityComponentSystem\03.Component</Filter>
     </ClCompile>
     <ClCompile Include="Entity.cpp">
-      <Filter>Private\02.Entity</Filter>
+      <Filter>source\01.EntityComponentSystem\02.Entity</Filter>
     </ClCompile>
     <ClCompile Include="BaseWorld.cpp">
-      <Filter>Private\01.World</Filter>
+      <Filter>source\01.EntityComponentSystem\01.World</Filter>
     </ClCompile>
     <ClCompile Include="World.cpp">
-      <Filter>Private\01.World</Filter>
+      <Filter>source\01.EntityComponentSystem\01.World</Filter>
     </ClCompile>
     <ClCompile Include="TypeIndex.cpp">
-      <Filter>Private\00.Define</Filter>
+      <Filter>source\00.Define</Filter>
     </ClCompile>
     <ClCompile Include="EntityView.cpp">
-      <Filter>Private\04.Internal</Filter>
+      <Filter>source\01.EntityComponentSystem\04.Internal</Filter>
     </ClCompile>
     <ClCompile Include="EntityIterator.cpp">
-      <Filter>Private\04.Internal</Filter>
+      <Filter>source\01.EntityComponentSystem\04.Internal</Filter>
     </ClCompile>
     <ClCompile Include="EntityComponentView.cpp">
-      <Filter>Private\04.Internal</Filter>
+      <Filter>source\01.EntityComponentSystem\04.Internal</Filter>
     </ClCompile>
     <ClCompile Include="EntityComponentIterator.cpp">
-      <Filter>Private\04.Internal</Filter>
-    </ClCompile>
-    <ClCompile Include="ComponentHandle.cpp">
-      <Filter>Private\04.Internal</Filter>
+      <Filter>source\01.EntityComponentSystem\04.Internal</Filter>
     </ClCompile>
     <ClCompile Include="pch.cpp">
-      <Filter>Private\00.Define</Filter>
+      <Filter>source\00.Define</Filter>
+    </ClCompile>
+    <ClCompile Include="ComponentHandle.cpp">
+      <Filter>source\01.EntityComponentSystem\03.Component</Filter>
+    </ClCompile>
+    <ClCompile Include="BaseSystem.cpp">
+      <Filter>source\01.EntityComponentSystem\05.System</Filter>
+    </ClCompile>
+    <ClCompile Include="System.cpp">
+      <Filter>source\01.EntityComponentSystem\05.System</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
