--- a/EngineModule/EngineModule/EngineModule.vcxproj
+++ b/EngineModule/EngineModule/EngineModule.vcxproj
@@ -155,7 +155,10 @@
     <ClInclude Include="EntityComponentView.h" />
     <ClInclude Include="EntityIterator.h" />
     <ClInclude Include="EntityView.h" />
+    <ClInclude Include="InputEnumClass.h" />
+    <ClInclude Include="InputManager.h" />
     <ClInclude Include="System.h" />
+    <ClInclude Include="TimeManager.h" />
     <ClInclude Include="TypeIndex.h" />
     <ClInclude Include="World.h" />
   </ItemGroup>
@@ -171,6 +174,7 @@
     <ClCompile Include="EntityComponentView.cpp" />
     <ClCompile Include="EntityIterator.cpp" />
     <ClCompile Include="EntityView.cpp" />
+    <ClCompile Include="InputManager.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -178,6 +182,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="System.cpp" />
+    <ClCompile Include="TimeManager.cpp" />
     <ClCompile Include="TypeIndex.cpp" />
     <ClCompile Include="World.cpp" />
   </ItemGroup>
