--- a/Fire/GameApplication/imgui.ini
+++ b/Fire/GameApplication/imgui.ini
@@ -12,28 +12,24 @@ Collapsed=0
 DockId=0x00000005,0
 
 [Window][Component]
-ViewportPos=435,71
-ViewportId=0xCB0F23F4
+Pos=430,48
 Size=388,603
 Collapsed=0
 
 [Window][System]
-ViewportPos=2004,74
-ViewportId=0xD4B39271
+Pos=2007,53
 Size=388,1209
 Collapsed=0
 DockId=0x00000001,2
 
 [Window][Entity]
-ViewportPos=2004,74
-ViewportId=0xD4B39271
+Pos=2007,53
 Size=388,1209
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Dear ImGui Demo]
-ViewportPos=2004,74
-ViewportId=0xD4B39271
+Pos=2007,53
 Size=388,1209
 Collapsed=0
 DockId=0x00000001,1
@@ -179,7 +175,7 @@ Column 2  Width=42
 Column 3  Weight=1.0000
 
 [Docking][Data]
-DockNode    ID=0x00000004 Pos=2004,74 Size=388,1209 Split=Y
+DockNode    ID=0x00000004 Pos=2007,76 Size=388,1209 Split=Y
   DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=392,266 Selected=0xF57F7DD5
   DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=392,690
 
