--- a/EngineModule/ImpReflection/ImpReflection.vcxproj
+++ b/EngineModule/ImpReflection/ImpReflection.vcxproj
@@ -141,23 +141,39 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="BaseVariant.h" />
+    <ClInclude Include="BaseTypeConverter.h" />
+    <ClInclude Include="ClassType.h" />
+    <ClInclude Include="EnumClassType.h" />
     <ClInclude Include="ImpReflectionHeader.h" />
     <ClInclude Include="ImpReflectionPCH.h" />
+    <ClInclude Include="Meta.h" />
+    <ClInclude Include="PrimitiveFunciton.h" />
+    <ClInclude Include="PrimitiveType.h" />
+    <ClInclude Include="ReflectionMacro.h" />
+    <ClInclude Include="StringType.h" />
     <ClInclude Include="Type.h" />
     <ClInclude Include="TypeCategoryEnumClass.h" />
-    <ClInclude Include="Variant.h" />
+    <ClInclude Include="TypeConverter.h" />
+    <ClInclude Include="TypeManager.h" />
+    <ClInclude Include="VectorType.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="BaseVariant.cpp" />
+    <ClCompile Include="BaseTypeConverter.cpp" />
+    <ClCompile Include="ClassType.cpp" />
+    <ClCompile Include="EnumClassType.cpp" />
     <ClCompile Include="ImpReflectionPCH.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="Meta.cpp" />
+    <ClCompile Include="PrimitiveType.cpp" />
+    <ClCompile Include="StringType.cpp" />
     <ClCompile Include="Type.cpp" />
-    <ClCompile Include="Variant.cpp" />
+    <ClCompile Include="TypeConverter.cpp" />
+    <ClCompile Include="TypeManager.cpp" />
+    <ClCompile Include="VectorType.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
