--- a/EngineModule/Test/Test.vcxproj
+++ b/EngineModule/Test/Test.vcxproj
@@ -111,7 +111,7 @@
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>$(OutDir);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>EngineModule.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>EngineModule.lib;ImpReflection.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -135,7 +135,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp" />
+    <ClCompile Include="ecs.cpp" />
+    <ClCompile Include="reflectcpp.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\EngineModule\EngineModule.vcxproj">
