--- a/EngineModule/Test/Test.vcxproj.filters
+++ b/EngineModule/Test/Test.vcxproj.filters
@@ -11,7 +11,10 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp">
+    <ClCompile Include="ecs.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="reflectcpp.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
