--- a/5_Project/ImpEngineModule/ImpEngineModule.vcxproj
+++ b/5_Project/ImpEngineModule/ImpEngineModule.vcxproj
@@ -147,6 +147,7 @@
     <ClInclude Include="Camera.h" />
     <ClInclude Include="CameraManager.h" />
     <ClInclude Include="EngineModule.h" />
+    <ClInclude Include="EngineModuleHeader.h" />
     <ClInclude Include="EntityResource.h" />
     <ClInclude Include="EventManager.h" />
     <ClInclude Include="EventEnum.h" />
@@ -154,7 +155,6 @@
     <ClInclude Include="IWorld.h" />
     <ClInclude Include="Component.h" />
     <ClInclude Include="ComponentHandle.h" />
-    <ClInclude Include="EngineModuleHeader.h" />
     <ClInclude Include="EngineModulePCH.h" />
     <ClInclude Include="Entity.h" />
     <ClInclude Include="EntityComponentIterator.h" />
@@ -163,6 +163,7 @@
     <ClInclude Include="EntityView.h" />
     <ClInclude Include="InputEnum.h" />
     <ClInclude Include="InputManager.h" />
+    <ClInclude Include="Mesh.h" />
     <ClInclude Include="PathManager.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="ResourceManager.h" />
@@ -189,6 +190,7 @@
     <ClCompile Include="EntityIterator.cpp" />
     <ClCompile Include="EntityView.cpp" />
     <ClCompile Include="InputManager.cpp" />
+    <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="PathManager.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
