--- a/5_Project/ImpEngineDemo/imgui.ini
+++ b/5_Project/ImpEngineDemo/imgui.ini
@@ -9,9 +9,9 @@ Size=32,40
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-ViewportPos=1562,252
+ViewportPos=1214,165
 ViewportId=0xE927CF2F
-Size=1042,634
+Size=487,532
 Collapsed=0
 
 [Window][File]
@@ -51,18 +51,18 @@ Size=520,600
 Collapsed=0
 
 [Window][Example: Custom rendering]
-ViewportPos=779,261
-ViewportId=0x3AC84485
+Pos=557,122
 Size=531,474
 Collapsed=0
 
 [Window][DockSpace Demo]
-Pos=0,24
-Size=1920,1056
+Pos=0,-3
+Size=1280,936
 Collapsed=0
 
 [Window][Example: Documents]
-Pos=609,13
+ViewportPos=609,63
+ViewportId=0x1FD64BEB
 Size=648,1034
 Collapsed=0
 
@@ -88,8 +88,7 @@ Size=32,40
 Collapsed=0
 
 [Window][Example: Property editor]
-ViewportPos=543,443
-ViewportId=0x593C5C9B
+Pos=543,366
 Size=430,450
 Collapsed=0
 
@@ -131,8 +130,8 @@ Size=395,321
 Collapsed=1
 
 [Window][ResourceViewer]
-Pos=0,716
-Size=899,244
+Pos=0,557
+Size=899,403
 Collapsed=0
 DockId=0x00000007,0
 
@@ -150,7 +149,7 @@ Size=387,92
 Collapsed=0
 
 [Window][Save Successed!!]
-Pos=365,37
+Pos=368,36
 Size=200,50
 Collapsed=0
 
@@ -165,19 +164,20 @@ Size=623,156
 Collapsed=0
 
 [Window][Dear ImGui ID Stack Tool]
-Pos=60,60
+ViewportPos=60,110
+ViewportId=0x811A7A42
 Size=354,104
 Collapsed=0
 
 [Window][Dear ImGui Style Editor]
-ViewportPos=396,189
+ViewportPos=1121,62
 ViewportId=0x6D551092
-Size=352,1034
+Size=595,1034
 Collapsed=0
 
 [Window][About Dear ImGui]
 Pos=62,60
-Size=570,126
+Size=518,156
 Collapsed=0
 
 [Window][Example: Long text display]
@@ -210,10 +210,10 @@ Column 1  Weight=1.0000
 [Docking][Data]
 DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,74 Size=1280,936 Split=X
   DockNode      ID=0x00000001 Parent=0x8B93E3BD SizeRef=899,1056 Split=Y
-    DockNode    ID=0x00000006 Parent=0x00000001 SizeRef=1920,542 Split=X
+    DockNode    ID=0x00000006 Parent=0x00000001 SizeRef=1920,531 Split=X
       DockNode  ID=0x00000002 Parent=0x00000006 SizeRef=872,871
       DockNode  ID=0x0000000A Parent=0x00000006 SizeRef=876,871 CentralNode=1 Selected=0xE87781F4
-    DockNode    ID=0x00000007 Parent=0x00000001 SizeRef=1920,244 Selected=0xDD3E564C
+    DockNode    ID=0x00000007 Parent=0x00000001 SizeRef=1920,403 Selected=0xDD3E564C
   DockNode      ID=0x00000003 Parent=0x8B93E3BD SizeRef=379,1056 Split=Y Selected=0x49F073B2
     DockNode    ID=0x00000004 Parent=0x00000003 SizeRef=402,370 Selected=0x49F073B2
     DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=402,564 Selected=0xD0CC57A6
